--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "axios": "^1.6.8",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
+    "react-responsive-carousel": "^3.2.23",
+    "recoil": "^0.7.7",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
