--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
     "react-responsive-carousel": "^3.2.23",
