--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.1.0",
     "react-responsive-carousel": "^3.2.23",
     "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
