--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.15.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "axios": "^1.6.8",
+    "moment": "^2.30.1",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
