--- a/package.json
+++ b/package.json
@@ -21,11 +21,16 @@
     "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
+    "react-redux": "^9.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-simple-image-slider": "^2.4.1",
+    "react-use-websocket": "^3.0.0",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
-    "styled-components": "^6.1.8"
+    "redux": "^5.0.1",
+    "socket.io-client": "^4.7.5",
+    "styled-components": "^6.1.8",
+    "websocket": "^1.0.35"
   },
   "devDependencies": {
     "@types/node": "^20",
